# pandas-lineage

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  optional-requirements.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/: dependency-management.md  publishing.md  testing.md
examples/marquez-example/: README.md  getting_started.py  marquez_example.py  mock_csv.csv  mock_json.json  openlineage.yml  start_marquez.sh
examples/mock-api-example/: getting_started.py  mock_api.py  mock_api_example.py  openlineage.yml
pandas_lineage/: __init__.py  decorators.py  types.py
pandas_lineage/convention/: error_handling.py
pandas_lineage/custom_types/: lineage.py  pandas.py
pandas_lineage/decorators/: _utils.py  input.py  output.py
pandas_lineage/io/parsers/: readers.py
pandas_lineage/pandas_lineage/convention/: error_handling.py
pandas_lineage/pandas_lineage/custom_types/: lineage.py
pandas_lineage/pandas_lineage/decorators/: input.py
pandas_lineage/pandas_lineage/io/parsers/: readers.py
pandas_lineage/pandas_lineage/tests/io/parsers/: test_readers.py
pandas_lineage/pandas_lineage/tests/types/: test_lineage.py
pandas_lineage/tests/: test_types.py
pandas_lineage/tests/data/: abc123_dataframe.csv  abs123_dataframe.json
pandas_lineage/tests/io/parsers/: test_readers.py
pandas_lineage/tests/types/: test_lineage.py
pandas_lineage/types/: lineage.py  pandas.py
tests/data/: abc123_dataframe.csv  abc123_dataframe.snappy.parquet
