[tool.poetry]
name = "pandas-lineage"
version = "0.0.2"
description = "A pandas extension built for OpenLineage"
authors = ["Gage Russell <gage.russell.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pandas_lineage"}]

[tool.poetry.dependencies]
python = "^3.8"
openlineage-python = "0.13.1"
pandas = "1.4.4"
pyarrow = {version = "^9.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
parquet = ["pyarrow"]
